--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,22 +1,41 @@
+---
+import Header from "@/components/Header.astro";
+---
+
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
-	</head>
-	<body>
-		<slot />
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <title>Yero CS</title>
+  </head>
+  <body class="bg-background flex flex-col items-center text-white">
+    <!-- Fondo repetido -->
+
+    <!-- Contenido -->
+    <Header />
+    <div class="max-w-[1200px] md:px-4 w-full min-h-screen">
+      <slot />
+    </div>
+  </body>
 </html>
 
 <style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
+  html {
+    scroll-behavior: smooth;
+  }
+  body {
+    margin: 0;
+    width: 100%;
+    height: auto; /* Ajusta la altura al contenido */
+  }
+
+  body > div:first-child {
+    min-height: 100%;
+    height: auto;
+    position: absolute;
+    bottom: 0;
+  }
 </style>
