translate in english

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -1,5 +1,5 @@
 ---
-import ExperienceItem from "./ExperienceItem.astro"
+import ExperienceItem from "./ExperienceItem.astro";
 // const EXPERIENCE = [
 //   {
 //     date: "Actualmente...",
@@ -19,38 +19,38 @@ import ExperienceItem from "./ExperienceItem.astro"
 // ]
 const EXPERIENCE = [
   {
-    date: "Marzo 2024 - Presente",
+    date: "August 2024 - Present",
     title: "Full-stack Developer",
     company: "Kedo!",
     description: `
-      Desarrollo de backend en NestJS y frontend en Next.js, mejorando la experiencia de usuarios y proveedores. Creación de un CRM interno y landing pages corporativas para optimizar la presencia online y atraer nuevos usuarios.
+      Spearheaded backend development with NestJS and frontend development with Next.js, enhancing user and provider experience. Designed and implemented a robust CRM system for internal operations, driving user acquisition and engagement. Focused on Clean Architecture principles and scalable infrastructure.
     `,
     link: "https://www.linkedin.com/in/naveed-cuellar-66b4b4218/",
   },
   {
-    date: "Enero 2021 - Presente",
-    title: "Co-Founder",
-    company: "Quinti",
-    description: `
-      Creación de una app de delivery en Flutter para áreas remotas, conectando negocios locales con nuevos clientes. App con más de 5k de descargas.
-    `,
-    link: "https://www.linkedin.com/in/naveed-cuellar-66b4b4218/",
-  },
-  {
-    date: "Agosto 2023 - Agosto 2024",
+    date: "August 2023 - August 2024",
     title: "Full-stack Developer",
     company: "Multilingual Interpreters and Translators",
     description: `
-      Lideré el desarrollo de un LMS usando NestJS y Next.js, con SSR y autenticación segura. Coordinación con stakeholders para garantizar objetivos claros y funcionalidad eficiente.
+     Led the development of a Learning Management System (LMS) leveraging NestJS and Next.js with Server-Side Rendering (SSR) and secure authentication protocols. Streamlined onboarding processes by building an automated system that integrated HR tools, document management, and notifications. Enhanced the HR software system to manage Employee Tickets and Attendance Tracking. Delivered a detailed invoice report feature to help finance teams with monthly tracking.
     `,
     link: "https://www.linkedin.com/in/naveed-cuellar-66b4b4218/",
   },
   {
-    date: "Agosto 2021 - Agosto 2023",
+    date: "August 2021 - August 2023",
     title: "Frontend Developer Jr",
     company: "Multilingual Interpreters and Translators",
     description: `
-      Migración de software desde C++ a Next.js, mejorando la experiencia de usuario. Implementación de notificaciones en tiempo real y un módulo de chat con Firebase.
+      Orchestrated the migration of legacy software from C++ to Next.js, significantly improving user experience and system performance. Implemented real-time notifications and a chat module using Firebase, enhancing communication efficiency. Developed reporting modules and dashboards for attendance tracking and performance analytics. Contributed to the development of a module for managing Employee Tickets, Onboarding, and other HR tools, improving team collaboration and performance monitoring.
+    `,
+    link: "https://www.linkedin.com/in/naveed-cuellar-66b4b4218/",
+  },
+  {
+    date: "January 2021 - Present",
+    title: "Technical Co-Founder",
+    company: "Quinti",
+    description: `
+      Built and launched a Flutter-based delivery application connecting local businesses with customers in remote areas. Integrated real-time updates and geolocation services to improve delivery accuracy and user experience. Achieved over 5k downloads, driving growth and engagement in underserved regions.
     `,
     link: "https://www.linkedin.com/in/naveed-cuellar-66b4b4218/",
   },
