--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -11,11 +11,12 @@ import PrismaORM from "./icons/PrismaORM.astro";
 import Postgress from "./icons/Postgress.astro";
 import Flutter from "./icons/Flutter.astro";
 import Dart from "./icons/Dart.astro";
+import React from "./icons/React.astro";
 
 const TAGS = {
   NEXT: {
     name: "Next.js",
-    class: "bg-black text-white",
+    class: "bg-[#6C6C6C] text-white",
     icon: NextJS,
     iconType: "svg",
   },
@@ -23,6 +24,12 @@ const TAGS = {
     name: "Tailwind CSS",
     class: "bg-[#003159] text-white",
     icon: Tailwind,
+    iconType: "svg",
+  },
+  REACT: {
+    name: "React.js",
+    class: "bg-[#0028D9]/50 text-white",
+    icon: React,
     iconType: "svg",
   },
   NEST: {
@@ -38,12 +45,12 @@ const TAGS = {
   },
   FIREBASE: {
     name: "Firebase",
-    class: "bg-[#FFCA28]/80 text-black",
+    class: "bg-[#8E5C00]/80 text-white",
     icon: Firebase,
   },
   PRISMA: {
     name: "Prisma ORM",
-    class: "bg-[#0C344B] text-white",
+    class: "bg-[#139B77] text-white",
     icon: PrismaORM,
   },
   POSTGRES: {
@@ -65,29 +72,45 @@ const TAGS = {
 
 const PROJECTS = [
   {
-    title: "Quinti - App de delivery de comida",
+    title: "Quinti - Food Delivery App",
     description:
-      "App de delivery en Flutter para áreas remotas. Conexión de negocios locales con nuevos clientes. Con más de 5k descargas.",
+      "Food delivery app in Flutter for remote areas. Connecting local businesses with new customers. Over 5k downloads.",
     link: "https://quinti.vercel.app/",
     github: "https://github.com/pheralb/svgl",
     image: "/projects/proq.png",
     tags: [TAGS.FIREBASE, TAGS.FLUTTER, TAGS.DART, TAGS.TAILWIND],
   },
   {
-    title: "Carta virtual interactiva - ProCarta",
+    title: "Interactive Virtual Menu - ProCarta",
     description:
-      "Carta virtual interactiva para restaurantes. Diseño de menús digitales con opciones de personalización y pedidos online. Desarrollado con Next.js y Tailwind CSS.",
+      "Interactive virtual menu for restaurants. Digital menu design with customization options and online ordering. Developed with Next.js and Tailwind CSS.",
     link: "https://carta-digital-drab.vercel.app/carlos",
     image: "/projects/procarta.png",
-    tags: [TAGS.NEXT,TAGS.TYPESCRIPT, TAGS.TAILWIND, TAGS.NEST, TAGS.PRISMA, TAGS.POSTGRES],
+    tags: [
+      TAGS.TYPESCRIPT,
+      TAGS.TAILWIND,
+      TAGS.NEST,
+      TAGS.PRISMA,
+      TAGS.POSTGRES,
+      TAGS.REACT,
+      TAGS.NEXT,
+
+    ],
   },
   {
-    title: "Quinti Web - Marketplace para Restaurantes",
+    title: "Quinti Web - Marketplace for Restaurants",
     description:
-      "Versión web de Quinti, adaptada con Next.js, Firebase, Tailwind CSS y TypeScript para optimizar la experiencia de usuarios y restaurantes.",
+      "Web version of Quinti, adapted with Next.js, Firebase, Tailwind CSS, and TypeScript to optimize the experience for users and restaurants.",
     link: "https://deliverymanchay.vercel.app/delivery",
     image: "/projects/quieweb.jpg",
-    tags: [TAGS.NEXT, TAGS.FIREBASE, TAGS.TAILWIND, TAGS.TYPESCRIPT],
+    tags: [
+      TAGS.FIREBASE,
+      TAGS.TAILWIND,
+      TAGS.TYPESCRIPT,
+      TAGS.REACT,
+      TAGS.NEXT,
+
+    ],
   },
   {
     title: "Landing Page - Quinti",
@@ -95,7 +118,7 @@ const PROJECTS = [
       "Landing page para presentar la app de Quinti y atraer usuarios y restaurantes. Explicación clara de sus beneficios.",
     link: "https://quinti.vercel.app/",
     image: "/projects/quilanding.png",
-    tags: [TAGS.NEXT, TAGS.TAILWIND],
+    tags: [TAGS.TAILWIND, TAGS.REACT, TAGS.NEXT],
   },
   {
     title: "Temporaly - MVP de Venta de Fruta por Temporada",
@@ -103,7 +126,7 @@ const PROJECTS = [
       "MVP para un negocio de venta de frutas de temporada al sector C y B. Incluye pruebas de usabilidad y efectividad.",
     link: "https://temporaly.vercel.app/",
     image: "/projects/Temporaly.png",
-    tags: [TAGS.NEXT, TAGS.TAILWIND, TAGS.FIREBASE],
+    tags: [TAGS.TAILWIND, TAGS.FIREBASE, TAGS.REACT, TAGS.NEXT],
   },
 ];
 
@@ -118,16 +141,16 @@ let showMore = false;
         <article
           class={`flex flex-col space-x-0 space-y-8 group md:flex-row md:space-x-8 md:space-y-0 ${i > 2 ? "hidden" : ""}`}
         >
-          <div class="w-full md:w-1/2">
+          <a target="_blank" href={link} role="link" class="w-full md:w-1/2">
             <div class="relative flex flex-col items-center col-span-6 row-span-5 gap-8 transition duration-500 ease-in-out transform shadow-xl overflow-clip rounded-xl sm:rounded-xl md:group-hover:-translate-y-1 md:group-hover:shadow-2xl lg:border lg:border-gray-800 lg:hover:border-gray-700 lg:hover:bg-gray-800/50">
               <img
                 alt="Proyecto"
                 class="object-cover object-top w-full h-56 transition duration-500 sm:h-full md:scale-110 md:group-hover:scale-105"
-                // loading="lazy"
+                loading="lazy"
                 src={image}
               />
             </div>
-          </div>
+          </a>
 
           <div class="w-full md:w-1/2 md:max-w-lg">
             <h3 class="text-2xl font-bold text-gray-800 dark:text-gray-100">
@@ -164,80 +187,6 @@ let showMore = false;
       )
     )
   }
-
-  <!-- <p
-    class="flex justify-center text-primary cursor-pointer mt-4"
-    id="toggle-button"
-  >
-    {showMore ? "Ver menos proyectos" : "Ver más proyectos"}
-    <svg
-      xmlns="http://www.w3.org/2000/svg"
-      class="w-5 icon icon-tabler icon-tabler-chevron-right"
-      width="24"
-      height="24"
-      viewBox="0 0 24 24"
-      stroke-width="2"
-      stroke="currentColor"
-      fill="none"
-      stroke-linecap="round"
-      stroke-linejoin="round"
-    >
-      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-      <path d="M9 6l6 6l-6 6"></path>
-    </svg>
-  </p> -->
 </div>
 <script>
-  // const toggleButton:any = document.getElementById("toggle-button");
-  // const allProjects = document.querySelectorAll("article");
-  // let showingAll = false;
-  
-  // // Lazy loading fix: forzar carga de imágenes cuando son visibles
-  // const images = document.querySelectorAll("img");
-  
-  // const loadImage = (img:any) => {
-  //   if (img.hasAttribute("data-src")) {
-  //     img.src = img.getAttribute("data-src");
-  //     img.removeAttribute("data-src");
-  //   }
-  // };
-
-  // const observer = new IntersectionObserver((entries) => {
-  //   entries.forEach((entry) => {
-  //     if (entry.isIntersecting) {
-  //       const img = entry.target;
-  //       loadImage(img);
-  //       observer.unobserve(img);
-  //     }
-  //   });
-  // });
-
-  // images.forEach((image) => {
-  //   observer.observe(image);
-  // });
-
-  // allProjects.forEach((project, index) => {
-  //   if (index >= 2) {
-  //     project.classList.add("hidden");
-  //   }
-  // });
-
-  // toggleButton.textContent = "Ver más proyectos";
-  // toggleButton.addEventListener("click", () => {
-  //   showingAll = !showingAll;
-
-  //   if (showingAll) {
-  //     allProjects.forEach((project) => {
-  //       project.classList.remove("hidden");
-  //     });
-  //     toggleButton.textContent = "Ver menos proyectos";
-  //   } else {
-  //     allProjects.forEach((project, index) => {
-  //       if (index >= 2) {
-  //         project.classList.add("hidden");
-  //       }
-  //     });
-  //     toggleButton.textContent = "Ver más proyectos";
-  //   }
-  // });
 </script>
