--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,7 @@ import Desktop from "@/components/icons/Desktop.astro";
     </div>
     <div class="p-16 lg:pl-0 lg:pt-32">
       <h1 class="text-3xl font-black lg:text-6xl">
-        Soy<div class="p-[0.5rem]"></div> Yerodin <span class="text-primary"
+        I’m<div class="p-[0.5rem]"></div> Yerodin <span class="text-primary"
           >Cuellar</span
         >
       </h1>
@@ -43,10 +43,9 @@ import Desktop from "@/components/icons/Desktop.astro";
         class="h-2 w-[60%] md:w-[200px] bg-primary mt-4 mb-4 lg:mt-6 lg:mb-4 rounded-full"
       >
       </div>
-      <p class="font-semibold lg:text-2xl">Desarrollador Full stack</p>
+      <p class="font-semibold lg:text-2xl">Full stack Developer</p>
       <p class="font-light mt-4 lg:max-w-[600px] md:text-xl text-[#f3f3f3]">
-        +3 años de experiencia. Ingeniero Informatico esapecializado en
-        desarrollo de webs
+        +3 years of experience. Software Engineer specialized in web development with Javascript
       </p>
       <div class="flex justify-center md:justify-start">
         <div class="flex gap-3 mt-4">
@@ -70,14 +69,14 @@ import Desktop from "@/components/icons/Desktop.astro";
   <SectionContainer id="experiencia">
     <TitleSection>
       <Briefcase class="size-8" />
-      Experiencia laboral
+      Work Experience
     </TitleSection>
     <Experience />
   </SectionContainer>
   <SectionContainer id="proyectos">
     <TitleSection>
       <Desktop class="size-7 " />
-      Proyectos
+      Projects
     </TitleSection>
     <Projects />
   </SectionContainer>
@@ -85,7 +84,7 @@ import Desktop from "@/components/icons/Desktop.astro";
   <SectionContainer id="sobre-mi">
     <TitleSection>
       <ProfileCheck class="size-8" />
-      Sobre mí
+   About me
     </TitleSection>
     <AboutMe />
   </SectionContainer>
