--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -9,25 +9,38 @@ const personalImageAlt = "Miguel Ángel";
     class="[&>p]:mb-4 [&>p>strong]:text-yellow-500 dark:[&>p>strong]:text-yellow-100 [&>p>strong]:font-normal [&>p>strong]:font-mono text-pretty order-2 md:order-1"
   >
     <p>
-      Me llamo Yerodin y soy un apasionado del desarrollo de software con más de
-      <strong>tres años de experiencia</strong> en la creación de aplicaciones y
-      soluciones tecnológicas.
+      Hi, I'm Yerodin, a Backend Developer with over <strong
+        >three years of experience</strong
+      > in creating scalable and efficient software solutions.
     </p>
 
     <p>
-      Algunos de mis logros incluyen <strong>cofundar Quinti</strong>, una app
-      de delivery diseñada para conectar negocios locales en áreas remotas con
-      nuevos clientes, y <strong>liderar el desarrollo de un LMS</strong> en Multilingual
-      Interpreters and Translators, optimizando procesos y mejorando la experiencia
-      de los usuarios.
+      Throughout my career, I’ve had the opportunity to develop comprehensive <strong
+        >HR software systems</strong
+      >, including modules for <strong>Onboarding</strong>, <strong
+        >Ticketing</strong
+      >, <strong>Attendance Tracking</strong>, and <strong
+        >Payroll Management</strong
+      >, designed to streamline administrative workflows and improve team
+      coordination.
     </p>
 
     <p>
-      Actualmente, en <strong>Kedo!</strong>, estoy contribuyendo al crecimiento
-      de la empresa mediante el desarrollo de un backend robusto, un CRM interno
-      y <em class="italic">landing pages</em> que mejoran la presencia online y atraen
-      nuevos usuarios. Mi enfoque siempre está en equilibrar el rendimiento técnico
-      con un sólido criterio de negocio.
+      One of my key accomplishments is <strong
+        >leading the backend development of a Learning Management System (LMS)</strong
+      > at Multilingual Interpreters and Translators, which helped optimize learning
+      processes and improve user engagement. I also developed a <strong
+        >CRM system</strong
+      > to enhance customer relationship management, enabling more efficient communication
+      and tracking.
+    </p>
+
+    <p>
+      Additionally, I co-founded <strong>Quinti</strong>, a food delivery app
+      aimed at connecting local businesses with customers in remote areas. With
+      over 5k downloads, Quinti’s real-time order tracking and optimized
+      notifications help enhance user engagement and streamline the delivery
+      process.
     </p>
   </div>
 
@@ -40,4 +53,3 @@ const personalImageAlt = "Miguel Ángel";
     style="object-position: 50% 50%"
   />
 </article>
-
