--- a/src/components/icons/NextJS.astro
+++ b/src/components/icons/NextJS.astro
@@ -1,31 +1,14 @@
 <svg
   {...Astro.props}
+  width="800px"
+  height="800px"
+  viewBox="0 0 16 16"
+  fill="none"
   xmlns="http://www.w3.org/2000/svg"
-  width="256"
-  height="256"
-  preserveAspectRatio="xMidYMid"
-  viewBox="0 0 256 256"
 >
-  <defs>
-    <linearGradient id="c" x1="55.633%" x2="83.228%" y1="56.385%" y2="96.08%">
-      <stop offset="0%" stop-color="#FFF"></stop>
-      <stop offset="100%" stop-color="#FFF" stop-opacity="0"></stop>
-    </linearGradient>
-    <linearGradient id="d" x1="50%" x2="49.953%" y1="0%" y2="73.438%">
-      <stop offset="0%" stop-color="#FFF"></stop>
-      <stop offset="100%" stop-color="#FFF" stop-opacity="0"></stop>
-    </linearGradient>
-    <circle id="a" cx="128" cy="128" r="128"></circle>
-  </defs>
-  <mask id="b" fill="#fff">
-    <use xlink:href="#a"></use>
-  </mask>
-  <g mask="url(#b)">
-    <circle cx="128" cy="128" r="128"></circle>
-    <path
-      fill="url(#c)"
-      d="M212.634 224.028 98.335 76.8H76.8v102.357h17.228V98.68L199.11 234.446a128.433 128.433 0 0 0 13.524-10.418Z"
-    ></path>
-    <path fill="url(#d)" d="M163.556 76.8h17.067v102.4h-17.067z"></path>
-  </g>
+  <path
+    fill-rule="evenodd"
+    clip-rule="evenodd"
+    d="M8 1.5C4.41015 1.5 1.5 4.41015 1.5 8C1.5 11.5899 4.41015 14.5 8 14.5C9.35329 14.5 10.6088 14.0871 11.6492 13.3799L6 6.57712V11.25C6 11.6642 5.66421 12 5.25 12C4.83579 12 4.5 11.6642 4.5 11.25V4.5C4.5 4.184 4.69807 3.9019 4.99529 3.79458C5.29251 3.68726 5.62511 3.77775 5.82699 4.02085L13.3008 13.0209C13.5622 13.3357 13.523 13.802 13.2127 14.0687C11.813 15.272 9.99057 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8C16 8.76428 15.8926 9.50473 15.6916 10.2065C15.5936 10.5489 15.4733 10.8818 15.3325 11.2037C15.1665 11.5832 14.7243 11.7562 14.3448 11.5902C13.9653 11.4242 13.7922 10.982 13.9583 10.6025C14.0725 10.3413 14.1701 10.0712 14.2496 9.79351C14.4125 9.2247 14.5 8.6232 14.5 8C14.5 4.41015 11.5899 1.5 8 1.5ZM10.5 3.75C10.9142 3.75 11.25 4.08579 11.25 4.5V7.5C11.25 7.91421 10.9142 8.25 10.5 8.25C10.0858 8.25 9.75 7.91421 9.75 7.5V4.5C9.75 4.08579 10.0858 3.75 10.5 3.75Z"
+    fill="#000000"></path>
 </svg>
