--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,8 +28,8 @@ import Desktop from "@/components/icons/Desktop.astro";
   >
     <div>
       <img
-        class="rounded-full shadow-lg w-[250px] h-[250px] mx-auto md:w-[450px] md:h-[450px]"
-        src="/images/yero.png"
+        class="rounded-full shadow-lg w-[250px] h-[250px] mx-auto md:w-[450px] md:h-[450px] md:mt-8"
+        src="/images/yero2.png"
         alt="Yerodin Cuellar"
       />
     </div>
