add page quinti

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -80,54 +80,54 @@ const PROJECTS = [
     image: "/projects/proq.png",
     tags: [TAGS.FIREBASE, TAGS.FLUTTER, TAGS.DART, TAGS.TAILWIND],
   },
-  {
-    title: "Interactive Virtual Menu - ProCarta",
-    description:
-      "Interactive virtual menu for restaurants. Digital menu design with customization options and online ordering. Developed with Next.js and Tailwind CSS.",
-    link: "https://carta-digital-drab.vercel.app/carlos",
-    image: "/projects/procarta.png",
-    tags: [
-      TAGS.TYPESCRIPT,
-      TAGS.TAILWIND,
-      TAGS.NEST,
-      TAGS.PRISMA,
-      TAGS.POSTGRES,
-      TAGS.REACT,
-      TAGS.NEXT,
+  // {
+  //   title: "Interactive Virtual Menu - ProCarta",
+  //   description:
+  //     "Interactive virtual menu for restaurants. Digital menu design with customization options and online ordering. Developed with Next.js and Tailwind CSS.",
+  //   link: "https://carta-digital-drab.vercel.app/carlos",
+  //   image: "/projects/procarta.png",
+  //   tags: [
+  //     TAGS.TYPESCRIPT,
+  //     TAGS.TAILWIND,
+  //     TAGS.NEST,
+  //     TAGS.PRISMA,
+  //     TAGS.POSTGRES,
+  //     TAGS.REACT,
+  //     TAGS.NEXT,
 
-    ],
-  },
-  {
-    title: "Quinti Web - Marketplace for Restaurants",
-    description:
-      "Web version of Quinti, adapted with Next.js, Firebase, Tailwind CSS, and TypeScript to optimize the experience for users and restaurants.",
-    link: "https://deliverymanchay.vercel.app/delivery",
-    image: "/projects/quieweb.jpg",
-    tags: [
-      TAGS.FIREBASE,
-      TAGS.TAILWIND,
-      TAGS.TYPESCRIPT,
-      TAGS.REACT,
-      TAGS.NEXT,
+  //   ],
+  // },
+  // {
+  //   title: "Quinti Web - Marketplace for Restaurants",
+  //   description:
+  //     "Web version of Quinti, adapted with Next.js, Firebase, Tailwind CSS, and TypeScript to optimize the experience for users and restaurants.",
+  //   link: "https://deliverymanchay.vercel.app/delivery",
+  //   image: "/projects/quieweb.jpg",
+  //   tags: [
+  //     TAGS.FIREBASE,
+  //     TAGS.TAILWIND,
+  //     TAGS.TYPESCRIPT,
+  //     TAGS.REACT,
+  //     TAGS.NEXT,
 
-    ],
-  },
-  {
-    title: "Landing Page - Quinti",
-    description:
-      "Landing page para presentar la app de Quinti y atraer usuarios y restaurantes. Explicación clara de sus beneficios.",
-    link: "https://quinti.vercel.app/",
-    image: "/projects/quilanding.png",
-    tags: [TAGS.TAILWIND, TAGS.REACT, TAGS.NEXT],
-  },
-  {
-    title: "Temporaly - MVP de Venta de Fruta por Temporada",
-    description:
-      "MVP para un negocio de venta de frutas de temporada al sector C y B. Incluye pruebas de usabilidad y efectividad.",
-    link: "https://temporaly.vercel.app/",
-    image: "/projects/Temporaly.png",
-    tags: [TAGS.TAILWIND, TAGS.FIREBASE, TAGS.REACT, TAGS.NEXT],
-  },
+  //   ],
+  // },
+  // {
+  //   title: "Landing Page - Quinti",
+  //   description:
+  //     "Landing page para presentar la app de Quinti y atraer usuarios y restaurantes. Explicación clara de sus beneficios.",
+  //   link: "https://quinti.vercel.app/",
+  //   image: "/projects/quilanding.png",
+  //   tags: [TAGS.TAILWIND, TAGS.REACT, TAGS.NEXT],
+  // },
+  // {
+  //   title: "Temporaly - MVP de Venta de Fruta por Temporada",
+  //   description:
+  //     "MVP para un negocio de venta de frutas de temporada al sector C y B. Incluye pruebas de usabilidad y efectividad.",
+  //   link: "https://temporaly.vercel.app/",
+  //   image: "/projects/Temporaly.png",
+  //   tags: [TAGS.TAILWIND, TAGS.FIREBASE, TAGS.REACT, TAGS.NEXT],
+  // },
 ];
 
 let visibleProjects = PROJECTS; // Inicialmente mostrar solo 2 proyectos
