add page quinti

--- a/src/pages/quinti.astro
+++ b/src/pages/quinti.astro
@@ -7,7 +7,7 @@ import Layout from "../layouts/Layout.astro";
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         
-        <title>Quinti - Bienvenido</title>
+        <title>QUINTI INC-TECHNOLOGIES</title>
         <meta name="description" content="Tu asistente para entrenamientos y progreso personal." />
     
         <!-- Open Graph para compartir en redes -->
